# UBB_CS

Year 1/Sem1/ASC/Assignments/: Assignment2.asm  Assignment2.lst  Lab3.asm  Laboratory_6.asm  Section1_exercise15_MuresanIanis.asm  TEMAWEEK11.asm  assignment5.asm  assignment_4.asm  assignment_5.asm  assignment_6.asm  assignment_8.asm  assignment_9.asm  exampractice.asm  final_exam.asm  laboratory_4.asm  laboratory_5.asm  laboratory_5_8.asm  laboratory_7.asm  laboratory_9.asm  model_exam.asm  modulweek11.asm  muresan_ianis.asm  practice.asm  read_number.asm
Year 1/Sem1/ASC/Course/08. Multimodule Programming/: 01. Multimodule Programming part I.pptx
Year 1/Sem1/FP/Assignments/a1/: README.md  p1.py
Year 1/Sem1/FP/Assignments/a10/: docs.html  documentation.py
Year 1/Sem1/FP/Assignments/a2/: main.py
Year 1/Sem1/FP/Assignments/a3/: SortAlgorithmsTesting.py  Testing.py  file.txt  time_complexity.py
Year 1/Sem1/FP/Assignments/a4/: naive_approach.py  test.py
Year 1/Sem1/FP/a1/: p2.py  p3.py
Year 1/Sem1/FP/a2/: README.md  Testing.py
Year 1/Sem1/FP/a3/: README.md  main.py
Year 1/Sem1/FP/a4/: README.md  dynamic_programming.py  explanations.txt  iterative_approach.py  main.py  recursive_approach.py
Year 1/Sem1/FP/a5/src/: program.py
Year 1/Sem1/FP/a6/src/: docs.html  start.py  test.py  ui.py
Year 1/Sem1/FP/a7/: README.md
Year 1/Sem1/FP/a7/repository/: docs.html  memory_repository.py  text_file_repository.py
Year 1/Sem1/FP/a7/services/: service.py  test.py
Year 1/Sem1/FP/a7/ui/: ui.py
Year 1/Sem1/FP/a8/domain/: domain.py
Year 1/Sem2/DSA/1_Queue/: CMakeLists.txt  ExtendedTest.cpp  Queue.cpp  Queue.h  main.cpp
Year 1/Sem2/DSA/2_SortedIteratedListLaboratory/: App.cpp  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ReadME.md  ShortTest.cpp  ShortTest.h  SortedIteratedList.cpp  SortedIteratedList.h
Year 1/Sem2/DSA/3_PriorityQueueLaboratory/: App.cpp  PriorityQueue.cpp  PriorityQueue.h  README.md  ShortTest.cpp  ShortTest.h
Year 1/Sem2/DSA/4_SortedMultiMapLaboratory/: App.cpp  ExtendedTest.cpp  ExtendedTest.h  README.md  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
Year 1/Sem2/DSA/5_SortedMultiMapLaboratory/: App.cpp  ExtendedTest.cpp  ExtendedTest.h  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h  readME.md
Year 1/Sem2/Graphs/: README.md
Year 1/Sem2/Graphs/Graph_practical_work_01/: Graph  README.md
Year 1/Sem2/Graphs/Graph_practical_work_02/: Assigned_Problem(03).py  ReadME.md  graph.py
Year 1/Sem2/Graphs/Graph_practical_work_03/: README.md  graph.py  graph.txt  graph50.txt
Year 1/Sem2/Graphs/Graph_practical_work_04/: README.md  graph.py  graph.txt  graph_bonus_3.txt  no_dag.txt
Year 1/Sem2/Graphs/Graph_practical_work_05/: README.md  anotherThreeApproaches.py  graph.py  graph.txt  graph10.txt  graph25.txt  greedy_vertex_cover.py  local_search_heuristic.py  main.py  primal_dual_dual_approximation.py  vertex_cover_lp_relaxation.py  vertex_cover_maximal_matching.py
Year 1/Sem2/OOP/Assignments/a10/: CMakeLists.txt  main.cpp
Year 1/Sem2/OOP/Assignments/a10/src/adoption/: AdoptionList.cpp  AdoptionList.h  AdoptionListFactory.cpp  AdoptionListFactory.h  CSVAdoptionList.cpp  CSVAdoptionList.h  HTMLAdoptionList.cpp  HTMLAdoptionList.h
Year 1/Sem2/OOP/Assignments/a10/src/domain/: Dog.cpp  Dog.h
Year 1/Sem2/OOP/Assignments/a10/src/exceptions/: CustomExceptions.h
Year 1/Sem2/OOP/Assignments/a10/src/gui/: AddDogDialog.cpp  AddDogDialog.h  AdoptedDogsTableModel.cpp  AdoptedDogsTableModel.h  ChartDialog.cpp  ChartDialog.h  MainWindow.cpp  MainWindow.h  RemoveDogDialog.cpp  RemoveDogDialog.h  ShowAllAdoptedDialog.cpp  ShowAllAdoptedDialog.h  ShowByBreedDialog.cpp  ShowByBreedDialog.h  ShowListDogsDialog.cpp  ShowListDogsDialog.h  ShowOneByOneDialog.cpp  ShowOneByOneDialog.h  UndoRedoDialog.cpp  UndoRedoDialog.h  UpdateDogDialog.cpp  UpdateDogDialog.h
Year 1/Sem2/OOP/Assignments/a10/src/repository/: Repo.h
Year 1/Sem2/OOP/Assignments/a10/src/service/: service.cpp  service.h
Year 1/Sem2/OOP/Assignments/a10/src/undoRedo/: AddDogCommand.cpp  AddDogCommand.h  AdoptDogCommand.cpp  AdoptDogCommand.h  ICommand.cpp  ICommand.h  RemoveDogCommand.cpp  RemoveDogCommand.h  UndoRedoManager.cpp  UndoRedoManager.h  UpdateDogCommand.cpp  UpdateDogCommand.h
Year 1/Sem2/OOP/Assignments/a10/src/validator/: validator.cpp  validator.h
Year 1/Sem2/OOP/Seminary/Playlist - polymoprhic undo - stub/: CMakeLists.txt
Year 1/Sem2/OOP/Seminary/Playlist - polymoprhic undo - stub/Playlist/: Action.cpp  Action.h  ActionAdd.cpp  ActionAdd.h  ActionRemove.cpp  ActionRemove.h  ActionUpdate.cpp  ActionUpdate.h  Repository.cpp  Repository.h  Service.cpp  Service.h  UI.cpp  UI.h
Year 1/Sem2/OS/Processes/: pipe_pb1.c  pipe_pb2.c  pipe_pb4.c  processes_pb1.c  processes_pb2.c
Year 1/Sem2/OS/Threads/: pthread_airplanes.c  threads_pb1.c  threads_pb2.c  threads_pb3.c  threads_pb4.c
(+425 files in other folders)
